@@ -58,6 +58,11 @@ RELEASE NOTES
     Removed the definitions of the no longer necessary '$lgt_keysort'/2 and
     '$lgt_sort'/2 internal predicates from the supported config files.
 
+    Updated the shell scripts used for generating the PDF versions of the
+    Logtalk User and Reference Manuals in order to use (by default) the Apache
+    FOP XSL:FO processor (version 0.95 or later) and to provide compatibility
+    with recent versions of the xsltproc XSLT processor.
+
     Added an experimental example of coinduction when using ECLiPSe, YAP, or
     SWI-Prolog as the back-end Prolog compiler.
 
